--- a/apps/app-client/src/app/modules/auth/pages/login/login.html
+++ b/apps/app-client/src/app/modules/auth/pages/login/login.html
@@ -1,4 +1,4 @@
-<orca-particles-background
+<app-particles-background
   [backgroundColor]="backgroundColor()"
   [particleColor]="particleColor()"
   [particleCount]="100"
@@ -12,7 +12,7 @@
         <div class="flex items-center justify-center p-8 lg:p-12">
           <div class="w-full max-w-md">
             <div class="text-center">
-              <img [src]="logoSrc()" alt="Orca Logo" width="192" class="block mx-auto mb-6" />
+              <img [src]="logoSrc()" alt="App Logo" width="192" class="block mx-auto mb-6" />
               <h2 class="text-2xl font-semibold mb-2 !text-surface-900 dark:text-white">
                 Portal de Administración
               </h2>
@@ -69,8 +69,8 @@
         </div>
 
         <!-- Right Panel - Background Image -->
-        <div class="bg-cover bg-orca-ai"></div>
+        <div class="bg-cover bg-app-ai"></div>
       </div>
     </p-card>
   </div>
-</orca-particles-background>
+</app-particles-background>
