--- a/apps/app-client/src/app/modules/users/components/create-user-modal/create-user-modal.component.css
+++ b/apps/app-client/src/app/modules/users/components/create-user-modal/create-user-modal.component.css
@@ -1,4 +1,4 @@
-/* Create Orca User Modal Styles - Optimized */
+/* Create User Modal Styles - Optimized */
 @reference "tailwindcss";
 
 /* Core input focus enhancement */
