--- a/apps/app-client/src/app/modules/users/components/create-user-modal/create-user-modal.component.html
+++ b/apps/app-client/src/app/modules/users/components/create-user-modal/create-user-modal.component.html
@@ -1,4 +1,4 @@
-<!-- Create Orca User Form -->
+<!-- Create User Form -->
 <div class="p-8 bg-white dark:bg-zinc-900">
   <!-- Header -->
   <div class="mb-8">
