--- a/libs/shared-features/src/lib/shared/components/layouts/authenticated-layout/authenticated-layout.html
+++ b/libs/shared-features/src/lib/shared/components/layouts/authenticated-layout/authenticated-layout.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen overflow-hidden p-4 gap-4 bg-surface-0 dark:bg-zinc-800">
-  <orca-sidebar></orca-sidebar>
+  <app-sidebar></app-sidebar>
   <div class="flex-1 flex flex-col min-w-0 bg-white dark:bg-zinc-800 rounded-2xl border border-zinc-200 dark:border-zinc-700 transition-all duration-300 ease-in-out">
-    <orca-top-menu></orca-top-menu>
+    <app-top-menu></app-top-menu>
     <main class="flex-1 overflow-y-auto scrollbar-thin scrollbar-track-transparent scrollbar-thumb-gray-300 hover:scrollbar-thumb-gray-400 dark:scrollbar-thumb-gray-600 dark:hover:scrollbar-thumb-gray-500 scroll-smooth">
       <router-outlet></router-outlet>
     </main>
