--- a/apps/app-client/src/app/modules/users/components/delete-user-modal/delete-user-modal.component.html
+++ b/apps/app-client/src/app/modules/users/components/delete-user-modal/delete-user-modal.component.html
@@ -1,4 +1,4 @@
-<!-- Delete Orca User Confirmation -->
+<!-- Delete User Confirmation -->
 <div class="p-6">
   <!-- Warning Header -->
   <div class="flex items-center gap-3 mb-6">
