--- a/libs/shared-features/src/lib/shared/components/layouts/top-menu/top-menu.component.css
+++ b/libs/shared-features/src/lib/shared/components/layouts/top-menu/top-menu.component.css
@@ -51,11 +51,11 @@
   @apply bg-blue-50 dark:bg-blue-900/20 border-blue-200 dark:border-blue-700;
 }
 
-.organization-item.orca-option {
+.organization-item.app-option {
   @apply bg-zinc-50 dark:bg-zinc-800 font-medium;
 }
 
-.organization-item.orca-option.selected {
+.organization-item.app-option.selected {
   @apply bg-blue-50 dark:bg-blue-900/20;
 }
 
@@ -67,7 +67,7 @@
   @apply text-blue-600 dark:text-blue-400;
 }
 
-.organization-item.orca-option .organization-icon {
+.organization-item.app-option .organization-icon {
   @apply text-blue-600 dark:text-blue-400;
 }
 
