--- a/apps/app-client/src/app/modules/auth/pages/login/login.html
+++ b/apps/app-client/src/app/modules/auth/pages/login/login.html
@@ -13,7 +13,7 @@
           <div class="w-full max-w-md">
             <div class="text-center">
               <img [src]="logoSrc()" alt="App Logo" width="192" class="block mx-auto mb-6" />
-              <h2 class="text-2xl font-semibold mb-2 !text-surface-900 dark:text-white">
+              <h2 class="text-2xl font-semibold mb-2 text-zinc-900 dark:text-white">
                 Portal de Administración
               </h2>
               <p class="text-gray-500 dark:text-gray-300">Inicie sesión para acceder a su cuenta</p>
